repair the main function:add service();